--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>AI Quote Generator</title>
   </head>
   <body>
-    <h1>AI Quote Generator</h1>
+    <h1>Welcome to the AI Quote Generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/luciequant" target="_blank">Lucie Quantová</a>
+      and is open-sourced on
+      <a href="https://github.com/luciequant/quote-generator" target="_blank">
+        GitHub</a
+      >
+      and is hosted on
+      <a href="https://aiquotegeneratorlq.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
+    </footer>
   </body>
   <script src="javascript/index.js"></script>
 </html>
