Added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>AI Quote Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Quote Generator</h1>
+    <header>
+      <h1>Welcome to the AI Quote Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>“Knowing yourself is the beginning of all wisdom.”</div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/luciequant" target="_blank">Lucie Quantová</a>
