--- a/index.html
+++ b/index.html
@@ -4,37 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>AI Quote Generator</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to the AI Quote Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>“Knowing yourself is the beginning of all wisdom.”</div>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/luciequant" target="_blank">Lucie Quantová</a>
-      and is open-sourced on
-      <a href="https://github.com/luciequant/quote-generator" target="_blank">
-        GitHub</a
-      >
-      and is hosted on
-      <a href="https://aiquotegeneratorlq.netlify.app/" target="_blank"
-        >Netlify</a
-      >.
-    </footer>
+    <div class="container">
+      <header>
+        <h1>Welcome to the AI Quote Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="quote">
+          “Knowing yourself is the beginning of all wisdom.”
+        </div>
+      </main>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/luciequant" target="_blank"
+          >Lucie Quantová</a
+        >
+        and is open-sourced on
+        <a href="https://github.com/luciequant/quote-generator" target="_blank">
+          GitHub</a
+        >
+        and is hosted on
+        <a href="https://aiquotegeneratorlq.netlify.app/" target="_blank"
+          >Netlify</a
+        >.
+      </footer>
+    </div>
   </body>
   <script src="javascript/index.js"></script>
 </html>
