--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Quote Generator</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
         <h1>Welcome to the AI Quote Generator</h1>
       </header>
       <main>
-        <form>
+        <form id="quote-generator">
           <input
             type="text"
             placeholder="Enter the topic"
@@ -31,7 +32,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="quote">
+        <div class="quote" id="quote">
           “Knowing yourself is the beginning of all wisdom.”
         </div>
       </main>
