--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Quote Generator</title>
   </head>
@@ -29,12 +30,11 @@
             required
             autocomplete="off"
             class="instructions"
+            id="instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="quote" id="quote">
-          “Knowing yourself is the beginning of all wisdom.”
-        </div>
+        <div class="quote" id="quote"></div>
       </main>
       <footer>
         This AI project was coded by
