--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
         <h1>Welcome to the AI Quote Generator</h1>
       </header>
       <main>
-        <form id="quote-generator">
-          <input
-            type="text"
-            placeholder="Enter the topic"
-            autofocus
-            required
-            autocomplete="off"
-            class="instructions"
-            id="instructions"
-          />
-          <input type="submit" class="submit-button" />
-        </form>
-        <div class="quote" id="quote"></div>
+        <div class="form-container">
+          <form id="quote-generator">
+            <input
+              type="text"
+              placeholder="Enter the topic"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="example">i.e: life, animals, sun etc.</div>
+        </div>
+        <div class="quote hidden" id="quote"></div>
       </main>
       <footer>
         This AI project was coded by
